--- a/src/styles/components/explore/stay-preview.scss
+++ b/src/styles/components/explore/stay-preview.scss
@@ -7,15 +7,15 @@
         align-items: center;
         display: grid;
         width: 100%;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(auto, 1fr);
         grid-auto-rows: minmax(100px, auto);
         padding: auto;
         gap: 15px;
 
         .stay-preview {
             // height: 370px;
-            // align-items: center;
-            width: 100%;
+            align-items: center;
+            max-width: 350px;
             margin-bottom: 20px;
             line-height: 18px;
             border-radius: 20px;
@@ -88,6 +88,7 @@
         align-self: center;
         opacity: 0.7;
         height: 100%;
+
         .next-btn {
             z-index: 25;
             background-color: var(--card-background-color);
