--- a/src/styles/components/stay-page/stay-page.scss
+++ b/src/styles/components/stay-page/stay-page.scss
@@ -54,8 +54,37 @@
 
     .info-user-btns {
         align-items: center;
-        width: 20%;
-        justify-content: space-around;
+        width: 10%;
+        justify-content: space-between;
+        height: 20px;
+        min-width: 130px;
+
+        .share-btn-container{
+            align-items: center;
+
+            p{
+                font-size: .875rem;
+                font-family: circular-bold;
+                text-decoration: underline;   
+            }
+            .MuiSvgIcon-root {
+                height: 0.7em;
+            }
+        }
+
+        .save-btn-container{
+            align-items: center;
+
+            p{
+                font-size: .875rem;
+                font-family: circular-bold;
+                text-decoration: underline;   
+            }
+
+            .MuiSvgIcon-root{
+                height: 0.7em;
+            }
+        }
     }
 
     .reviews-modal-btn {
