--- a/src/styles/components/header/signin.scss
+++ b/src/styles/components/header/signin.scss
@@ -5,7 +5,7 @@
     right: 60px;
     top: 120px;
     font-size: 14px;
-    padding: 14px;
+    padding: 22px;
     // border: 2px solid var(--font-dark-color);
     // border-radius: 20px;
     // background-color: var(--main-background-color);
@@ -19,15 +19,18 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        h2 {
+            margin: 5px
+        }
     }
 
     .signup-welcome-headding{
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-bottom: 20px;
         h2 {
-            line-height: 0.6em;
+            line-height: 0.4em;
+            margin-bottom: 40px;
         }
     }
 
@@ -64,28 +67,33 @@
 
         }
 
-        input {
-            font-size: 14px;
-            background-color: var(--btn-background-color) !important;
-            color: var(--font-gray-color);
-            border: 1px solid var(--font-gray-color);
-            box-shadow: 0 0 2px var(--font-lightgray-color);
-            border-radius: 5px;
+        // input {
+        //     font-size: 18px;
+        //     background-color: var(--btn-background-color) !important;
+        //     color: var(--font-gray-color);
+        //     border: 1px solid var(--font-gray-color);
+        //     box-shadow: 0 0 2px var(--font-lightgray-color);
+        //     border-radius: 5px;
+        //     margin-bottom: 6px;
 
-        }
+        // }
 
-        button {
-            display: flex;
-            justify-content: center;
-            width: fit-content;
-            min-width: 80px;
-            margin-top: 8px;
-            border-radius: 25px;
-            color: var(--font-dark-color);
-            border: 1px solid var(--font-gray-color);
-            box-shadow: 0 0 2px var(--font-lightgray-color);
-            cursor: pointer;
-            align-self: center;
+        // button {
+        //     display: flex;
+        //     justify-content: center;
+        //     width: fit-content;
+        //     min-width: 80px;
+        //     margin-top: 8px;
+        //     border-radius: 25px;
+        //     color: var(--font-dark-color);
+        //     border: 1px solid var(--font-gray-color);
+        //     box-shadow: 0 0 2px var(--font-lightgray-color);
+        //     cursor: pointer;
+        //     align-self: center;
+        // }
+
+        .btn-container {
+            width: 280px;
         }
 
     }
