--- a/src/styles/setup/media-quary.scss
+++ b/src/styles/setup/media-quary.scss
@@ -1,6 +1,8 @@
 @media screen and(max-width:720px) {
+  
     .app {
         grid-template-columns: 1fr 14fr 1fr !important;
+        overflow-x: hidden !important;
     }
 
     .AppHeader {
@@ -11,6 +13,7 @@
 
             .header-container {
                 margin: 0 20px;
+                padding: 0 !important;
 
                 .logo-img-container {
                     width: 72px !important;
@@ -34,7 +37,7 @@
 
                 .long-searchbar {
                     width: 350px;
-                    height: 150px;
+                    height: 115px;
                     top: 75px;
 
                     .searchbar-form {
@@ -173,14 +176,20 @@
         padding: 0;
         display: flex;
         flex-direction: column;
+        font-size: 12px;
+        max-width: 350px;
 
-        >* {
-            word-wrap: break-word;
+        .stay-name {
+            font-size: 15px;
+            font-family: circular-medium;
         }
 
         .stay-info-line {
             display: flex;
             flex-direction: column;
+            .info-super-host{
+                display: none;
+            }
         }
 
         .stay-gallery {
@@ -189,7 +198,6 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-
 
             .gallery-img-container {
                 position: relative;
@@ -201,12 +209,13 @@
                 padding: 0;
                 margin-top: 10px;
                 gap: 10px;
-
+  
                 img {
+                    display: block;
                     align-items: center;
                     max-width: 350px !important;
                     border-radius: 15px !important;
-
+                    margin-top: 15px;
                 }
             }
         }
@@ -241,8 +250,26 @@
             display: flex !important;
             flex-direction: column;
             grid-gap: 0;
+
+            .review-preview-container {
+                p {
+                    max-width: 350px;
+                    overflow-wrap: break-word;
+                }
+            }
         }
 
+        .rating-bars-container {
+            display: flex;
+            flex-direction: column;
+            max-width: 350px;
+
+            .bar-container {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+            }
+        }
     }
 
 
